Ô ªøcmake_minimum_required(VERSION 2.8)
#–ü—Ä–æ–≤–µ—Ä–∫–∞ –≤–µ—Ä—Å–∏–∏ CMake.
    set(PROJECT_NAME TStackList)
#–°–æ–∑–¥–∞–µ–º –æ–±—ã—á–Ω—É—é –ª–æ–∫–∞–ª—å–Ω—É—é –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é —Å –∏–º–µ–Ω–µ–º –ø—Ä–æ–µ–∫—Ç–∞
    project($
	    {
	    PROJECT_NAME}

)
#–ù–∞–∑–≤–∞–Ω–∏–µ –ø—Ä–æ–µ–∫—Ç–∞
    set(ListLib ListLib)
    set(ExceptionLib ExceptionLib)
    set(StackList StackList)
    set(StackListLib StackListLib)
    set(StackListTest StackListTest)
    set(CMAKE_CONFIGURATION_TYPES "Debug;Release" CACHE STRING "Configs"
	FORCE)
#–°–æ–∑–¥–∞–µ—Ç—Å—è –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è CMAKE_CONFIGURATION_TYPES —Å–æ –∑–Ω–∞—á–µ–Ω–∏–µ–º "Debug;Release" –∏ –º–µ—Ç–∫–æ–π/—Ä–∞–∑–¥–µ–ª–æ–º Configs, –ø–µ—Ä–µ–º–µ–Ω–Ω–∞—è —Å–æ—Ö—Ä–∞–Ω–∏–µ—Ç—Å—è –≤ —Å–ø–µ—Ü–∏–∞–ª—å–Ω–æ–º —Ñ–∞–π–ª–µ –¥–æ—Å—Ç—É–ø–Ω–æ–º –∏–∑ –≤—Å–µ—Ö —Ñ–∞–π–ª–æ–≤,
    if (NOT CMAKE_BUILD_TYPE)
#–ø—Ä–æ–≤–µ—Ä–∫–∞ –∏–º–µ—é—â–∏—Ö—Å—è —É –∫–æ–º–ø–∏–ª—è—Ç–æ—Ä–∞ –≤–∞—Ä–∏–∞–Ω—Ç–æ–≤ —Å–±–æ—Ä–∫–∏
    set(CMAKE_BUILD_TYPE Release)
#–ï—Å–ª–∏ –Ω–µ—Ç —Ç–æ —É—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º Release
	endif()
	file(GLOB hdrs "*.h*")
#–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é hdrs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
	file(GLOB srcs "*.cpp")
#–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é srcs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
#add_executable(${PROJECT_NAME} ${srcs} ${hdrs}) #–°–æ–∑–¥–∞–µ–º –ø—Ä–æ–µ–∫—Ç —Å –∏–º–µ–Ω–µ–º –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π ${PROJECT_NAME}, –≤ –Ω–µ–≥–æ –¥–æ–±–∞–≤–ª—è—é—Ç—Å—è —Ñ–∞–π–ª—ã –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã—Ö ${srcs} –∏ ${hdrs}
	include_directories($
			    {
			    CMAKE_CURRENT_SOURCE_DIR}
			    /gtest)
    add_subdirectory(gtest)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/ListLib)
    add_subdirectory(ListLib)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/ExceptionLib)
    add_subdirectory(ExceptionLib)
    include_directories($
			{
			CMAKE_CURRENT_SOURCE_DIR}

			/ListLib)
    add_subdirectory(StackList)
    add_subdirectory(StackListLib)
    add_subdirectory(StackListTest)
