Ô ªøfile(GLOB hdrs "*.h*")
#–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é hdrs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
    file(GLOB srcs "*.cpp")
#–î–æ–±–∞–≤–ª—è–µ–º –≤ –ø–µ—Ä–µ–º–µ–Ω–Ω—É—é srcs –≤—Å–µ —Ñ–∞–π–ª—ã —Å —Ä–∞—Å—à–∏—Ä–µ–Ω–∏–µ–º .h
    add_library($
		{
		ExceptionLib}

		STATIC $ {
		srcs}

		$ {
		hdrs}

)
#–°–æ–∑–¥–∞–µ–º —Å—Ç–∞—Ç–∏—á–µ—Å–∫—É—é –±–∏–±–ª–∏–æ—Ç–µ–∫—É —Å –∏–º–µ–Ω–µ–º –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω–æ–π ${MyLib1}, –æ–±—ä—è–≤–ª–µ–Ω–Ω–æ–π –≤ —Ä–æ–¥–∏—Ç–µ–ª—å—Å–∫–æ–º CMake —Ñ–∞–π–ª–µ (–ª–æ–∫–∞–ª—å–Ω—ã–µ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã–µ –ø–µ—Ä–µ–Ω–æ—Å—è—Ç—Å—è –≤ –Ω–∞—Å–ª–µ–¥–Ω–∏–∫–æ–≤), –≤ –Ω–µ—ë –¥–æ–±–∞–≤–ª—è—é—Ç—Å—è —Ñ–∞–π–ª—ã –∏–∑ –ø–µ—Ä–µ–º–µ–Ω–Ω—ã—Ö ${srcs} –∏ ${hdrs}
